# boldGPT

./: .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
boldgpt/: __init__.py  data.py  distributed_utils.py  features.py  model.py  order.py  patching.py  pca.py  resample.py  shuffle.py  tokenizer.py  utils.py  visualization.py
boldgpt/models/: __init__.py  beit.py  boldgpt.py  cbip.py  constants.py  generate.py  gpt.py  mae.py  registry.py  transformer.py  utils.py
boldgpt/resources/: nsd_flat_mask.npy
jobs/train_boldgpt_01/: batch.sh  batch_1.sh
jobs/train_boldgpt_03/: batch.sh
nsd_flat/: README.md  convert_nsd_annotations.py  download_data.sh  generate_dataset.py
nsd_flat/resources/: subj01.lh.all-vertices_fsaverage_space.npy  subj04.rh.all-vertices_fsaverage_space.npy  subj06.lh.all-vertices_fsaverage_space.npy  subj06.rh.all-vertices_fsaverage_space.npy  subj08.lh.all-vertices_fsaverage_space.npy  subj08.rh.all-vertices_fsaverage_space.npy
scripts/: fit_pca.py  fit_tokens.py  fit_vocab.py  train.py  train_gpt.py
tests/: conftest.py  test_model.py  test_patching.py  test_shuffle.py  test_tokenizer.py  test_transformer.py
tests/test_models/: test_beit.py  test_boldgpt.py  test_cbip.py  test_gpt.py  test_mae.py  test_registry.py  test_transformer.py
