[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "boldgpt"
description = "A GPT for brain activity maps"
authors = [
    {name = "Connor Lane", email = "connor.lane858@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT License"}
dependencies = [
    "numpy",
    "pandas",
    "Pillow",
    "pycocotools",
    "pycortex",
    "scikit-image",
    "scikit-learn",
    "scipy",
    "shapely",
    "timm",
    "torch",
    "torchvision",
    "tqdm",
]
dynamic = ["version"]

[project.urls]
"Homepage" = "https://github.com/clane9/boldGPT"

[tool.setuptools_scm]
write_to = "boldgpt/_version.py"

[tool.setuptools.packages.find]
include = ["boldgpt*", "nsd_flat*"]


[tool.isort]
profile = "black"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "DEBUG"

[tool.mypy]
no_strict_optional = true
ignore_missing_imports = true
